--- a/src/main/resources/com/example/codingweek21/form-new-offer.fxml
+++ b/src/main/resources/com/example/codingweek21/form-new-offer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -10,11 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label layoutX="273.0" layoutY="37.0" text="New offer" />
-        <HBox layoutX="124.0" layoutY="80.0" prefHeight="254.0" prefWidth="352.0">
+        <HBox layoutX="124.0" layoutY="80.0" prefHeight="235.0" prefWidth="352.0">
             <children>
                 <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                     <children>
@@ -69,9 +69,25 @@
                                 <ChoiceBox prefWidth="150.0" />
                             </children>
                         </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
+                     <children>
+                        <ChoiceBox prefWidth="150.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="252.0">
+                     <children>
+                        <TextField prefHeight="26.0" prefWidth="60.0" />
+                        <Label prefHeight="18.0" prefWidth="30.0" text="€">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
             </children>
         </HBox>
+      <Button fx:id="newOfferButton" layoutX="273.0" layoutY="332.0" mnemonicParsing="false" text="Submit" />
     </children>
 </AnchorPane>
