--- a/src/main/resources/com/example/codingweek21/form-new-account.fxml
+++ b/src/main/resources/com/example/codingweek21/form-new-account.fxml
@@ -10,12 +10,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="234.0" layoutY="18.0" text="Create a new account">
+        <Label layoutX="234.0" layoutY="12.0" text="Create a new account">
             <font>
                 <Font size="15.0" />
             </font>
         </Label>
-        <HBox alignment="TOP_CENTER" layoutX="45.0" layoutY="45.0" prefHeight="310.0" prefWidth="510.0">
+        <HBox alignment="TOP_CENTER" layoutX="44.0" layoutY="58.0" prefHeight="298.0" prefWidth="510.0">
             <children>
                 <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                     <children>
@@ -91,6 +91,7 @@
                 </VBox>
             </children>
         </HBox>
-        <Button fx:id="newAccountButton" layoutX="273.0" layoutY="355.0" mnemonicParsing="false" text="Submit" />
+        <Button fx:id="newAccountButton" layoutX="273.0" layoutY="360.0" mnemonicParsing="false" text="Submit" />
+      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="223.0" layoutY="34.0" prefHeight="18.0" prefWidth="164.0" textAlignment="CENTER" textFill="#ae0000" />
     </children>
 </AnchorPane>
