--- a/src/main/resources/com/example/codingweek21/form-new-account.fxml
+++ b/src/main/resources/com/example/codingweek21/form-new-account.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateUserController">
     <children>
         <Label layoutX="234.0" layoutY="12.0" text="Create a new account">
             <font>
@@ -41,7 +37,7 @@
                         </HBox>
                         <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
                             <children>
-                                <Label text="Adress : " />
+                                <Label text="Address : " />
                             </children>
                         </HBox>
                         <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
@@ -91,7 +87,7 @@
                 </VBox>
             </children>
         </HBox>
-        <Button fx:id="newAccountButton" layoutX="273.0" layoutY="360.0" mnemonicParsing="false" text="Submit" />
+        <Button fx:id="newAccountButton" layoutX="273.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#submit" text="Submit" />
       <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="223.0" layoutY="34.0" prefHeight="18.0" prefWidth="164.0" textAlignment="CENTER" textFill="#ae0000" />
     </children>
 </AnchorPane>
