--- a/src/main/resources/com/example/codingweek21/layout.fxml
+++ b/src/main/resources/com/example/codingweek21/layout.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.layout.*?>
 
 <HBox prefHeight="36.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.LayoutController">
-   <children>
+
+    <children>
       <MenuBar fx:id="menuBar" prefHeight="36.0" prefWidth="625.0">
         <menus>
           <Menu mnemonicParsing="false">
                <graphic>
-                  <Label onMouseClicked="#goToMyProfilePage" text="My profile" />
+                  <Label fx:id="myProfile" onMouseClicked="#goToMyProfilePage" text="My profile" />
                </graphic></Menu>
           <Menu mnemonicParsing="false">
                <graphic>
