connexion between pages + fix : menuBar -> toolBar

--- a/src/main/resources/com/example/codingweek21/allOffers.fxml
+++ b/src/main/resources/com/example/codingweek21/allOffers.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -8,52 +7,22 @@
     <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
    <VBox layoutY="54.0" prefHeight="26.0" prefWidth="602.0">
       <children>
-         <MenuBar>
-           <menus>
-             <Menu mnemonicParsing="false">
-                  <graphic>
-                     <Label text="Offer type :" />
-                  </graphic></Menu>
-             <Menu mnemonicParsing="false">
-                  <graphic>
-                     <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
-                  </graphic>
-             </Menu>
-               <Menu mnemonicParsing="false">
-                  <graphic>
-                     <Label text="Category :" />
-                  </graphic>
-               </Menu>
-               <Menu mnemonicParsing="false">
-                  <graphic>
-                     <ChoiceBox fx:id="category" prefHeight="25.0" prefWidth="60.0" />
-                  </graphic>
-               </Menu>
-               <Menu mnemonicParsing="false">
-                  <graphic>
-                     <Label text="Location :" />
-                  </graphic>
-               </Menu>
-               <Menu mnemonicParsing="false">
-                  <graphic>
-                     <ChoiceBox fx:id="RadiusOrPostcode" prefHeight="25.0" prefWidth="60.0" />
-                  </graphic>
-               </Menu>
-               <Menu mnemonicParsing="false">
-                  <graphic>
-                     <TextField prefHeight="25.0" prefWidth="81.0" promptText="54510, 30, ..." />
-                  </graphic>
-               </Menu>
-           </menus>
-            <VBox.margin>
-               <Insets left="15.0" right="15.0" />
-            </VBox.margin>
-         </MenuBar>
-      </children>
-   </VBox>
-   <VBox layoutX="500.0" layoutY="88.0" prefHeight="26.0" prefWidth="88.0">
-      <children>
-         <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="26.0" prefWidth="91.0" text="Save filters" />
+         <ToolBar prefHeight="40.0" prefWidth="200.0">
+            <items>
+               <Label text="Offer type :" />
+               <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
+               <Label text="Category :" />
+               <ChoiceBox fx:id="category" prefHeight="25.0" prefWidth="60.0" />
+               <Label text="Location :" />
+               <ChoiceBox fx:id="RadiusOrPostcode" prefHeight="25.0" prefWidth="60.0" />
+               <TextField prefHeight="25.0" prefWidth="81.0" promptText="54510, 30, ..." />
+               <VBox prefHeight="26.0" prefWidth="88.0">
+                  <children>
+                     <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="26.0" prefWidth="91.0" text="Save filters" />
+                  </children>
+               </VBox>
+            </items>
+         </ToolBar>
       </children>
    </VBox>
    <VBox layoutY="135.0" prefHeight="251.0" prefWidth="602.0">
