--- a/src/main/resources/com/example/codingweek21/form-login.fxml
+++ b/src/main/resources/com/example/codingweek21/form-login.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.LogInController">
     <children>
         <VBox alignment="CENTER_RIGHT" layoutX="198.0" layoutY="45.0" prefHeight="310.0" prefWidth="202.0">
             <children>
@@ -30,13 +25,13 @@
                 </VBox>
                 <Pane prefHeight="53.0" prefWidth="202.0">
                     <children>
-                        <Button layoutX="73.0" layoutY="9.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="57.0" text="Login" />
+                        <Button fx:id="loginButton" layoutX="73.0" layoutY="9.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="36.0" prefWidth="57.0" text="Login" />
                     </children>
                 </Pane>
                 <HBox alignment="CENTER" prefHeight="53.0" prefWidth="202.0" spacing="15.0">
                     <children>
                         <Label text="New here ?" />
-                        <Button mnemonicParsing="false" text="Register now" />
+                        <Button fx:id="registerButton" mnemonicParsing="false" onMouseClicked="#register" text="Register now" />
                     </children>
                 </HBox>
             </children>
