--- a/src/main/resources/com/example/codingweek21/form-new-offer.fxml
+++ b/src/main/resources/com/example/codingweek21/form-new-offer.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -49,12 +49,12 @@
                     <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                             <children>
-                                <TextField />
+                                <TextField fx:id="titleTextField" />
                             </children>
                         </HBox>
                         <HBox prefHeight="60.0" prefWidth="252.0">
                             <children>
-                                <TextArea prefHeight="81.0" prefWidth="200.0">
+                                <TextArea fx:id="descriptionTextArea" prefHeight="81.0" prefWidth="200.0">
                                     <font>
                                         <Font size="10.0" />
                                     </font>
@@ -65,18 +65,18 @@
                             </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
-                            <children>
-                                <ChoiceBox prefWidth="150.0" />
-                            </children>
+                     <children>
+                        <ComboBox fx:id="typeComboBox" prefWidth="150.0" />
+                     </children>
                         </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                      <children>
-                        <ChoiceBox prefWidth="150.0" />
+                        <ComboBox fx:id="themeComboBox" prefWidth="150.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="252.0">
                      <children>
-                        <TextField prefHeight="26.0" prefWidth="60.0" />
+                        <TextField fx:id="priceTextField" prefHeight="26.0" prefWidth="60.0" />
                         <Label prefHeight="18.0" prefWidth="30.0" text="€">
                            <HBox.margin>
                               <Insets left="5.0" />
@@ -89,5 +89,10 @@
             </children>
         </HBox>
       <Button fx:id="newOfferButton" layoutX="273.0" layoutY="332.0" mnemonicParsing="false" text="Submit" />
+      <Button fx:id="newOfferToOffersButton" layoutX="37.0" layoutY="33.0" mnemonicParsing="false" text="←">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
