--- a/src/main/resources/com/example/codingweek21/form-new-offer.fxml
+++ b/src/main/resources/com/example/codingweek21/form-new-offer.fxml
@@ -66,7 +66,7 @@
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                      <children>
-                        <ComboBox fx:id="typeComboBox" prefWidth="150.0" />
+                        <ComboBox fx:id="typeComboBox" prefWidth="150.0" promptText="Chose your type" />
                      </children>
                         </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
