--- a/src/main/resources/static/fxml/form-login.fxml
+++ b/src/main/resources/static/fxml/form-login.fxml
@@ -21,6 +21,7 @@
                     <children>
                         <TextField fx:id="userNameTextField" promptText="Username" />
                         <TextField fx:id="passwordTextField" promptText="Password" />
+                  <Label fx:id="errorLabel" text="Label" />
                     </children>
                 </VBox>
                 <Pane prefHeight="53.0" prefWidth="202.0">
