--- a/src/main/resources/static/fxml/allOffers.fxml
+++ b/src/main/resources/static/fxml/allOffers.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.AllOffersController">
     <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
@@ -12,10 +14,10 @@
                <Label text="Offer type :" />
                <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
                <Label text="Category :" />
-               <ChoiceBox fx:id="category" prefHeight="25.0" prefWidth="60.0" />
+               <ComboBox fx:id="category" prefHeight="25.0" prefWidth="60.0" />
                <Label text="Location :" />
-               <ChoiceBox fx:id="RadiusOrPostcode" prefHeight="25.0" prefWidth="60.0" />
-               <TextField prefHeight="25.0" prefWidth="81.0" promptText="54510, 30, ..." />
+               <ChoiceBox fx:id="radiusOrPostcode" prefHeight="25.0" prefWidth="60.0" />
+               <TextField fx:id="location" prefHeight="25.0" prefWidth="81.0" promptText="54510, 30, ..." />
                <VBox prefHeight="26.0" prefWidth="88.0">
                   <children>
                      <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="26.0" prefWidth="91.0" text="Save filters" />
@@ -25,9 +27,49 @@
          </ToolBar>
       </children>
    </VBox>
-   <VBox layoutY="135.0" prefHeight="251.0" prefWidth="602.0">
+   <VBox fx:id="offerToAdd" layoutY="135.0" prefHeight="251.0" prefWidth="602.0">
       <children>
-         <ScrollPane fx:id="scrollPane" prefHeight="252.0" prefWidth="602.0" />
+         <ScrollPane fx:id="scrollPane" prefHeight="252.0" prefWidth="602.0">
+            <content>
+               <VBox prefHeight="171.0" prefWidth="598.0">
+                  <children>
+                     <VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0">
+                        <children>
+                           <Label fx:id="offerTitle" prefHeight="36.0" prefWidth="382.0" text="Titre">
+                              <font>
+                                 <Font size="26.0" />
+                              </font>
+                           </Label>
+                           <GridPane prefHeight="88.0" prefWidth="149.0">
+                             <columnConstraints>
+                               <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="274.0" minWidth="10.0" prefWidth="73.4" />
+                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="483.80000000000007" />
+                             </columnConstraints>
+                             <rowConstraints>
+                               <RowConstraints maxHeight="27.399998092651366" minHeight="10.0" prefHeight="24.399998092651366" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="42.600001907348634" minHeight="10.0" prefHeight="35.400000000000006" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                                 <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                             </rowConstraints>
+                              <children>
+                                 <Label prefHeight="18.0" prefWidth="37.0" text="Type :" />
+                                 <Label prefHeight="18.0" prefWidth="58.0" text="Category :" GridPane.rowIndex="1" />
+                                 <Label prefHeight="19.0" prefWidth="69.0" text="Description :" GridPane.rowIndex="2" />
+                                 <Label fx:id="offerType" text="Label" GridPane.columnIndex="1" />
+                                 <Label fx:id="offerCategory" layoutX="84.0" layoutY="7.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <Label fx:id="offerDescription" layoutX="84.0" layoutY="24.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 <Label text="Price :" GridPane.rowIndex="3" />
+                                 <Label fx:id="offerPrice" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              </children>
+                           </GridPane>
+                        </children>
+                     </VBox>
+                  </children>
+                  <padding>
+                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  </padding>
+               </VBox>
+            </content></ScrollPane>
       </children>
    </VBox>
 
