--- a/src/main/resources/static/fxml/form-login.fxml
+++ b/src/main/resources/static/fxml/form-login.fxml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.LogInController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.LogInController">
     <children>
         <VBox alignment="CENTER_RIGHT" layoutX="198.0" layoutY="45.0" prefHeight="310.0" prefWidth="202.0">
             <children>
                 <Pane prefHeight="49.0" prefWidth="163.0">
                     <children>
-                        <Label layoutX="48.0" layoutY="25.0" text="Welcome Back !">
+                        <Label layoutX="48.0" layoutY="14.0" text="Welcome Back !">
                             <font>
                                 <Font size="15.0" />
                             </font>
                         </Label>
                     </children>
                 </Pane>
-                <VBox alignment="CENTER" fillWidth="false" prefHeight="111.0" prefWidth="202.0" spacing="20.0">
+                <VBox alignment="CENTER" fillWidth="false" prefHeight="111.0" prefWidth="218.0" spacing="10.0">
                     <children>
-                        <TextField fx:id="userNameTextField" promptText="Username" />
-                        <TextField fx:id="passwordTextField" promptText="Password" />
-                  <Label fx:id="errorLabel"/>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                              <TextField fx:id="userNameTextField" promptText="Username" />
+                        <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <PasswordField fx:id="passwordTextField" promptText="Password" />
+                        <ImageView fx:id="eyeImageView" fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </HBox>
+                  <Label fx:id="errorLabel" />
                     </children>
                 </VBox>
                 <Pane prefHeight="53.0" prefWidth="202.0">
