--- a/src/main/resources/static/fxml/form-login.fxml
+++ b/src/main/resources/static/fxml/form-login.fxml
@@ -17,7 +17,7 @@
             <children>
                 <Pane prefHeight="49.0" prefWidth="163.0">
                     <children>
-                        <Label layoutX="48.0" layoutY="14.0" text="Welcome Back !">
+                        <Label fx:id="welcome" layoutX="48.0" layoutY="14.0" text="Welcome Back !">
                             <font>
                                 <Font size="15.0" />
                             </font>
