--- a/src/main/resources/static/fxml/myProfile.fxml
+++ b/src/main/resources/static/fxml/myProfile.fxml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.MyProfileController">
-    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-   <VBox layoutY="37.0" prefHeight="30.0" prefWidth="602.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.MyProfileController">
+    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"  />
+   <VBox layoutY="35.0" prefHeight="365.0" prefWidth="600.0">
       <children>
-         <Label text="My Profil" />
+         <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0">
+            <children>
+               <Label text="Hello, " />
+               <Label fx:id="userName" prefHeight="18.0" prefWidth="245.0" />
+               <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="210.0" text="Account Balance : " textAlignment="RIGHT" />
+               <Label fx:id="balance" prefHeight="18.0" prefWidth="74.0" />
+            </children>
+            <padding>
+               <Insets left="20.0" />
+            </padding>
+         </HBox>
+         <Accordion prefHeight="326.0" prefWidth="600.0">
+           <panes>
+             <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" text="Login &amp; Security">
+                  <content>
+                     <VBox prefHeight="200.0" prefWidth="100.0" />
+                  </content>
+               </TitledPane>
+               <TitledPane animated="false" text="Your Offers">
+                 <content>
+                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                 </content>
+               </TitledPane>
+             <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="Your Orders" />
+           </panes>
+         </Accordion>
       </children>
    </VBox>
 
