--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.example.codingweek21.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<?import com.example.codingweek21.javafxComponent.ComboPanel?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label layoutX="273.0" layoutY="37.0" text="New offer" />
         <HBox layoutX="124.0" layoutY="80.0" prefHeight="235.0" prefWidth="352.0">
@@ -66,12 +62,12 @@
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                      <children>
-                        <ComboBox fx:id="typeComboBox" prefWidth="150.0" promptText="Chose your type" />
+                         <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
                      </children>
                         </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                      <children>
-                        <ComboBox fx:id="themeComboBox" prefWidth="150.0" />
+                        <ComboPanel fx:id="themeComboBox" prefWidth="300" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="252.0">
