refactor package codingweek21 into codingweek

--- a/src/main/resources/static/fxml/offerView.fxml
+++ b/src/main/resources/static/fxml/offerView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.OfferViewController">
+<VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferViewController">
         <children>
             <VBox prefHeight="128.0" prefWidth="558.0">
                 <children>
