--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.codingweek21.*?>
+<?import com.example.codingweek.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import com.example.codingweek21.javafxComponent.ComboPanel?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<?import com.example.codingweek.javafxComponent.ComboPanel?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
     <children>
         <Label layoutX="273.0" layoutY="37.0" text="New offer" />
         <HBox layoutX="124.0" layoutY="80.0" prefHeight="235.0" prefWidth="352.0">
@@ -50,7 +50,7 @@
                         </HBox>
                         <HBox prefHeight="60.0" prefWidth="252.0">
                             <children>
-                                <TextArea fx:id="descriptionTextArea" prefHeight="81.0" prefWidth="200.0">
+                                <TextArea fx:id="desc" prefHeight="81.0" prefWidth="200.0">
                                     <font>
                                         <Font size="10.0" />
                                     </font>
