--- a/src/main/resources/static/fxml/modifyProfile.fxml
+++ b/src/main/resources/static/fxml/modifyProfile.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.ModifyProfileController">
    <children>
-      <Button fx:id="saveButton" layoutX="176.0" layoutY="128.0" mnemonicParsing="false" text="Save" />
-      <Label fx:id="enterWhat" alignment="CENTER" layoutX="124.0" layoutY="18.0" prefHeight="18.0" prefWidth="150.0" text="Label" />
-      <TextField fx:id="newWhat" layoutX="123.0" layoutY="41.0" />
-      <PasswordField layoutX="124.0" layoutY="93.0" />
-      <Label layoutX="143.0" layoutY="77.0" text="Enter your current password">
+      <Button fx:id="saveButton" layoutX="176.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
+      <TextField fx:id="newWhat" layoutX="123.0" layoutY="31.0" />
+      <PasswordField fx:id="currentPW" layoutX="124.0" layoutY="86.0" />
+      <Label layoutX="143.0" layoutY="71.0" text="Enter your current password">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
          <font>
             <Font size="9.0" />
          </font>
