--- a/src/main/resources/static/fxml/modifyProfile.fxml
+++ b/src/main/resources/static/fxml/modifyProfile.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.ModifyProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyProfileController">
    <children>
       <Button fx:id="saveButton" layoutX="176.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
       <TextField fx:id="newWhat" layoutX="123.0" layoutY="31.0" />
